fix(components): Fix input group spacing issues (#1467)
* Add FormField__container to all inputs to group description and validation text

* Add position relative to invalid formfieldwrapper to fix stack order of elements for red border

* update snapshots for tests

* update inline class to be on the container instead of the wrapper for form fields

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -9,6 +9,10 @@
   --public-field--bottom-right-radius: var(--radius-base);
 }
 
+.container {
+  width: 100%;
+}
+
 /**
  * Wrapper
  **/
@@ -83,6 +87,7 @@
 .invalid,
 .invalid:focus-within {
   --field--border-color: var(--color-critical);
+  position: relative;
 }
 
 .disabled {
@@ -113,7 +118,7 @@
 }
 
 .inline {
-  display: inline-flex;
+  display: inline-block;
   width: auto;
 }
 
